[gd_scene load_steps=4 format=3 uid="uid://dnmmogncngtm4"]

[ext_resource type="Script" path="res://ExitButton.gd" id="1_22i4y"]
[ext_resource type="Script" path="res://MainMenuScript.gd" id="1_an167"]
[ext_resource type="Script" path="res://PlayButton.gd" id="1_ftkyk"]

[node name="MainMenuScene" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_an167")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TITLE" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "CAR GAME"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PlayGame" type="Control" parent="HBoxContainer/VBoxContainer/Label2"]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = -4.0
offset_right = 506.0
offset_bottom = -4.0
script = ExtResource("1_ftkyk")

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ExitGame" type="Control" parent="HBoxContainer/VBoxContainer/Label3"]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = 23.0
offset_right = 506.0
offset_bottom = 23.0
script = ExtResource("1_22i4y")

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "test
"

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OnlineButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start (Online)"

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_button_pressed"]
